# WEng

./: .dir-locals.el  .gitignore  CMakeLists.txt  CMakePresets.json  Debug  Environment.bat  Environment.sh  README.md  README.org  build.bat  build.sh  environment.sh  makefile
Docs/: CodingStyle.md  (+6 more)
Source/WCore/: CMakeLists.txt  README.md  WCore.org  WCore.puml
Source/WCore/Include/: WActor.h  WAsset.h  WComponent.h  WCore.h  WGeometryTypes.h  WLog.h  WLog.hpp  WObjectManager.h
Source/WCore/PrivateGenerated/: LinkDef.hpp
Source/WCore/Source/: WActor.cpp  WAsset.cpp  WComponent.cpp  WCore.cpp  WObjectManager.cpp  WSerialize.cpp  WStaticModel.cpp  WTexture.cpp  WTextureAsset.cpp
Source/WCore/unittest/: WCore_unittest.cpp
Source/WEngine/: CMakeLists.txt  README.md  README.org  WEngine.org
Source/WEngine/Compile/: Compile.cpp
Source/WEngine/CompileGenerated/: CompileGenerated.cpp  _WENGINE_WSYSTEMS_REG_DEF_.cpp  _WENGINE_WSYSTEMS_REG_DEF_.hpp
Source/WEngine/Include/: WEngine.h  WEngine.hpp  WLevelRegister.h  WLevelRegister.hpp  WRenderLevelLib.hpp
Source/WEngine/PrivateGenerated/: DllDef.h  DllDef.hpp  LinkDef.hpp
Source/WEngine/Source/: WEngine.cpp  WEngineDefaults.cpp  WInputMappingRegister.cpp  WSystemDb.cpp  WSystemRegister.cpp  WSystems.cpp  WSystemsRegister.cpp  WSystemsRunner.cpp
Source/WEngineInterfaces/: CMakeLists.txt  README.org  WEngineInterfaces.org
Source/WEngineInterfaces/Include/: IImporter.hpp  IImporterRegister.hpp  IImportersRegister.hpp  ILevel.hpp  ILevelRegister.hpp  IRender.hpp  IRenderResources.hpp
Source/WEngineInterfaces/PrivateGenerated/: DllDef.h  DllDef.hpp  LinkDef.hpp
Source/WEngineInterfaces/Source/: IImporterRegister.cpp
Source/WEngineObjects/: CMakeLists.txt  README.org  WEngineObjects.org
Source/WEngineObjects/CompileGenerated/: CompileGenerated.cpp
Source/WEngineObjects/PrivateGenerated/: DllDef.hpp  LinkDef.hpp
Source/WEngineObjects/PublicGenerated/: WActionAsset.WEngine.hpp  WActor.WEngine.hpp  WAmbientLightComponent.WEngine.hpp  WAsset.WEngine.hpp  WCameraComponent.WEngine.hpp  WCameraInputComponent.WEngine.hpp  WComponent.WEngine.hpp  WDirectionalLightComponent.WEngine.hpp  WEntity.WEngine.hpp  WInputMappingAsset.WEngine.hpp  WKeyMappingAsset.WEngine.hpp  WLevelObject.WEngine.hpp  WMovementComponent.WEngine.hpp  WObject.WEngine.hpp  WPointLightComponent.WEngine.hpp  WRenderPipelineAsset.WEngine.hpp  WRenderPipelineParametersAsset.WEngine.hpp  WStaticMeshAsset.WEngine.hpp  WStaticMeshComponent.WEngine.hpp  WTextureAsset.WEngine.hpp  WTransformComponent.WEngine.hpp  was_Level.WEngine.hpp
Source/WEngineObjects/Source/: Level.cpp  WActor.cpp  WActorComponentDb.cpp  WAsset.cpp  WAssetDb.cpp  WAssetManagerFacade.cpp  WComponent.cpp  WEntityComponentDb.cpp  WObjectDb.cpp  WObjectManager.cpp  WTextureAsset.cpp
Source/WEngineObjects/unittest/: WEngineObjects_unittest.cpp
Source/WFiles/: CMakeLists.txt
Source/WFiles/Include/: WReadFiles.h
Source/WFiles/Source/: WFiles.cpp
Source/WImporter/: CMakeLists.txt  WImporter.org
Source/WImporter/PrivateGenerated/: DllDef.hpp  LinkDef.hpp
Source/WImporter/Source/: WImporter.cpp  WImporterGltf.cpp  WImporterObj.cpp  WImporterTexture.cpp  WLib_stbi.cpp  WLib_stbi.hpp
Source/WImporters/: CMakeLists.txt
Source/WImporters/Include/: WImporter.hpp  WImporterRegister.hpp  WImporters.h  WImporters.hpp  WImportersRegister.h
Source/WImporters/PrivateGenerated/: DllDef.h
Source/WImporters/Source/: WImporter.cpp  WImporterRegister.cpp  WImporters.cpp  WImportersRegister.cpp
Source/WInterfaces/: CMakeLists.txt  WInterfaces.org
Source/WInterfaces/PrivateGenerated/: LinkDef.hpp
Source/WLevel/: CMakeLists.txt  README.org  WLevel.org
Source/WLevel/Include/: WLevel.hpp
Source/WLevel/PrivateGenerated/: DllDef.hpp  LinkDef.hpp
Source/WLevel/Source/: WLevel.cpp  WLevelDb.cpp  WLevelRegister.cpp
Source/WObjects/: CMakeLists.txt  WObjects.org
Source/WObjects/PrivateGenerated/: LinkDef.hpp
Source/WObjects/Source/: Level.cpp  WAsset.cpp  WAssetDb.cpp  WComponent.cpp  WEntityComponentDb.cpp
Source/WObjects/unittest/: WObjects_unittest.cpp
Source/WOpenGLTest/: CMakeLists.txt  _CMakeLists.txt
Source/WOpenGLTest/Shaders/: F_Main.glsl
Source/WOpenGLTest/Source/: WOpenGLTest.cpp
Source/WRender/: CMakeLists.txt  README.md  README.org  WRender.org
Source/WRender/Include/: CameraLib.hpp  IRenderResources.hpp  WCameraLib.hpp  WRender.h  WRender.hpp  WRenderCommand.h  WRenderCommandPool.h  WRenderCore.h  WRenderPipeline.h  WRenderPool.h  WRenderUtils.hpp  WShader.h  WShaderUtils.hpp  WVulkan.h  WWindow.h
Source/WRender/PrivateGenerated/: DllDef.hpp  LinkDef.hpp
Source/WRender/Shaders/: WRender_DrawInSwapChain.graphic.slang
Source/WRender/Source/: WDescriptorPoolUtils.cpp  WRender.cpp  WRenderCommand.cpp  WRenderCommandPool.cpp  WRenderPipeline.cpp  WRenderPool.cpp  WShader.cpp  WVkAssetCollection.cpp  WVkAssetRenderDataRAII.cpp  WVkAssetResources.cpp  WVkBuffer.cpp  WVkCommandPoolRAII.cpp  WVkDescriptor.cpp  WVkGBuffersPipelines.cpp  WVkGBuffersPipelinesRAII.cpp  WVkGBuffersPipelinesUtils.hpp  WVkGraphicsPipelines.cpp  WVkGraphicsPipelinesUtils.hpp  WVkImage.cpp  WVkMesh.cpp  WVkPipeline.cpp  WVkPostprocessPipeUtils.hpp  WVkPostprocessPipelines.cpp  WVkPostprocessPipelinesRAII.cpp  WVkRender.cpp  WVkRenderCommandPool.cpp  WVkRenderCommandPoolRAII.cpp  WVkRenderPipeline.cpp  WVkSurfaceRAII.cpp  WVkSwapChain.cpp  WVkSwapChainResources.hpp  WVkTexture.cpp  WVulkan.cpp
Source/WSandBox/: CMakeLists.txt
Source/WSandBox/Include/: H1.hpp  Shader.h
Source/WSandBox/Shaders/: V_Main.glsl
Source/WSandBox/Source/: AA.cpp  AA.hpp  BB.cpp  BB.hpp  WSandBox.cpp
Source/WSandBox/Tests/: CMakeLists.txt  _CMakeLists.txt
Source/WSandBox/source/: WSandBox.cpp
Source/WSpacers/: CMakeLists.txt  WSpacers.org
Source/WSpacers/Include/: GltfLevel.hpp  MonkeyLevel.hpp  PlaneLevel.hpp
Source/WSpacers/PrivateGenerated/: DllDef.h  DllDef.hpp  LinkDef.hpp
Source/WVulkanTest/: CMakeLists.txt
Source/WWindow/: CMakeLists.txt  WWindow.org
source/WSandBox/: CMakeLists.txt
(+470 files in other folders)
